# Schema-Drift-Detective-Auto-Migration-Agent

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  docker-compose.yml  generate_manual.py  pyproject.toml
.antigravitycli/: 7dee1a6e-3746-4ba3-a970-715aa5b9d810.json
.github/workflows/: ci.yml
bench/: __init__.py  all_methods.py  confusion.py  generate.py  runner.py
bench/baselines/: __init__.py  dbt_tests_baseline.py  ge_baseline.py  one_shot_llm_baseline.py
bench/results/: RESULTS.md  confusion-dbt.txt  confusion-ge.txt  confusion-oneshot.txt  confusion-ours.txt
bench/scenarios/: 03932e42bc49376e.json  03e97e7bc837516c.json  03eb8eb613e13d34.json  043748c7abfc72dc.json  067c3dfe281a5806.json  06ab4e5e93bccf29.json  077f1fb67bc751ec.json  07ab704fbc5c4536.json  0913aaaa5504584b.json  094c61847663fba0.json  0951787d79e380b4.json  0a83c75f805a4aa9.json  0ae3eb85d5cc1dd8.json  0b485984bc7c4c3c.json  0bef86770eacc0dc.json  0c032ac76122c117.json  0c472a9b901edd03.json  0cead7b834d82683.json  0dcb6a724801c97f.json  0e536ed6b8f49b2c.json  0e77a6f310ccff3d.json  102ec88eaeb7468d.json  10647ea27ccb1c8d.json  10aa1c75178ae93a.json  10cabd6456df801f.json  110ee68acf66a6b4.json  11311e1a9843d017.json  115206ddbb9c9063.json  1188ec186fed2839.json  12d93fbd707d6570.json  12ed55190f668b7e.json  13d9588431ffd8d4.json  142676fa2d512380.json  146b6a325aaf12f2.json  14d31dddb60e9b4e.json  16f45dbf1b4e5375.json  184b0ae239d113a1.json  1865571edcb47d8d.json  193ab46f804de45f.json  1a3fd145dfd7a85d.json  (+324 more)
dbt_project/: dbt_project.yml
dbt_project/models/: sources.yml
dbt_project/models/marts/: fct_orders.sql  mart_revenue_daily.sql
dbt_project/models/staging/: stg_customers.sql  stg_orders.sql
dbt_project/profiles/: profiles.yml
docs/: 01_initial_spec.md  02_revised_plan.md  03_live_pr_path.md  04_architecture.md  05_benchmark.md  06_launch_checklist.md  07_jaffle_shop_case_study.md  BLOG.md  PHASE_0_DONE.md
infra/: postgres-init.sql  seed_demo_data.sql
prompts/: migration_drafter.md
src/schema_drift/: __init__.py  audit.py  classifier.py  cli.py  demo.py  lineage.py  llm.py  metrics.py  migrator.py  models.py  ol.py  policy.py  pr.py  runner.py  slack.py
src/schema_drift/bi/: __init__.py  metabase.py
src/schema_drift/storage/: __init__.py  snapshot_store.py
src/schema_drift/watcher/: __init__.py  base.py  bigquery.py  debezium.py  duckdb.py  postgres.py  snowflake.py
tasks/: remaining_build.md  todo.md
tests/: test_adapters.py  test_audit_ol_slack.py  test_bench.py  test_classifier.py  test_cli.py  test_cli_watch.py  test_demo.py  test_duckdb_e2e.py  test_lineage.py  test_llm.py  test_metrics.py  test_migrator.py  test_models.py  test_policy.py  test_postgres_integration.py  test_pr.py  test_pr_live.py  test_runner.py  test_snapshot_store.py  test_watcher_base.py
tests/fixtures/: manifest.json  manifest_columns.json
